src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Affiliate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Affiliate (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Blogger_Commission_Percentage__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Blogger (%)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Benefit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Business Benefit (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Referral__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Business Referral (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Consuner_Show_Commission__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Consumer Show (%)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Customer_Referral__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Customer Referral (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Digital_Media_Commission_Percentage__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Digital Media (%)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hospitality__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Hospitality (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Medical_Show_Commission_Percentage__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Medical Show (%)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Medical__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Medical (%)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Online__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Online (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PBSI__Inventory_Location__c</fullName>
        <label>Inventory Location</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Center__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sales Center  (%)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Signature__c</fullName>
        <label>Signature</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Store_Commission_Percentage__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Store (%)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Wholesale__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Wholesale (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>c2g__APILicenseKey__c</fullName>
        <label>API License Key</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SupportDataAccessKey__c</fullName>
        <label>Support Data Access Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__Can_View_Not_Assigned_Prospects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can View Not Assigned Prospects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Api_Key__c</fullName>
        <label>Pardot Api Key</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Api_Version__c</fullName>
        <label>Pardot Api Version</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Id__c</fullName>
        <label>Pardot User Id</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Key__c</fullName>
        <label>Pardot User Key</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Role__c</fullName>
        <label>Pardot User Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkbase__Printer_Name__c</fullName>
        <label>Printer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__PrinterName__c</fullName>
        <label>UPS Printer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__UPSRegisteredPreference__c</fullName>
        <label>UPS Registered Preference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__shippingPreferenceUsed__c</fullName>
        <label>Shipping Preference Used</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>IS_FROZEN</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>TIMEZONE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Standard Platform User</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>Sales_Commissions_Percentages</fullName>
        <columns>FULL_NAME</columns>
        <columns>Blogger_Commission_Percentage__c</columns>
        <columns>Consuner_Show_Commission__c</columns>
        <columns>Digital_Media_Commission_Percentage__c</columns>
        <columns>Medical__c</columns>
        <columns>Medical_Show_Commission_Percentage__c</columns>
        <columns>Sales_Center__c</columns>
        <columns>Store_Commission_Percentage__c</columns>
        <filterScope>Everything</filterScope>
        <label>Sales Commissions Percentages</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>